--- a/showoptions.html
+++ b/showoptions.html
@@ -44,6 +44,8 @@ two -->
             x.style.display = "none";
           }
         }
+	/*the commented out code below is to test that value changes
+	on select*/
         //document.getElementById('display').innerHTML = value;
       }
 
